--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Gill Sans", sans-serif;
 }
-body{
+
+body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg,#2980b9, #b300ff);;
-  height:100vh;
-  overflow:visible;
+  background: linear-gradient(120deg, #2980b9, #b300ff);
+  height: 100vh;
+  overflow: visible;
 }
-.center{
+
+.center {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -22,41 +25,27 @@ body{
   border-radius: 10px;
   box-shadow: 10px 10px 15px #b300ff;
 }
-.center h1{
+
+.center h1 {
   text-align: center;
   color: #2196F3;
   padding: 20px;
   border-bottom: 1px solid silver;
+  font-size: 40px;
 }
-.center form{
+
+.center form {
   padding: 0 40px;
   box-sizing: border-box;
 }
-form .txt_field{
+
+.txt_field {
   position: relative;
   border-bottom: 2px solid #adadad;
   margin: 30px 0;
 }
 
-.c-loader {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  animation: is-rotating 3s infinite;
-  border: 6px dotted  #e5e5e5;
-  border-radius: 50%;
-  border-top-color: #51d4db;
-  height: 50px;
-  width: 50px;
-}
-
-@keyframes is-rotating {
-  to {
-    transform: rotate(1turn);
-  }
-}
-
-.txt_field input{
+.txt_field input {
   width: 100%;
   padding: 0 5px;
   height: 40px;
@@ -65,7 +54,8 @@ form .txt_field{
   background: none;
   outline: none;
 }
-.txt_field label{
+
+.txt_field label {
   position: absolute;
   top: 50%;
   left: 5px;
@@ -75,100 +65,27 @@ form .txt_field{
   pointer-events: none;
   transition: .4s;
 }
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 45px;
-  height: 32px;
-}
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor:default;
-  top:-9%;
-  left: 0;
-  right: 0;
-  bottom: 10px;;
-  background-color: #ccc;
-  -webkit-transition:.4s;
-  transition:.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content:"";
-  height: 19px;
-  width: 18px;
-  left: 6px;
-  bottom: 3px;
-  background-color: #ffffff;
-  -webkit-transition:.4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(15px);
-  -ms-transform: translateX(15px);
-  transform: translateX(15px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 100%;
-}
-.txt_field span::before{
-  content: '';
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 0%;
-  height: 2px;
-  background: linear-gradient(120deg,#2980b9, #b300ff);;
-  transition: .5s;
-}
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
+.txt_field input:focus ~ label {
   top: -5px;
-  color: #0099ff;
+  color: #0093f5;
 }
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
-  width: 100%;
-}
-.pass{
+
+.pass {
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
   cursor: pointer;
 }
-.pass:hover{
+
+.pass:hover {
   text-decoration: underline;
 }
-input[type="submit"]{
+
+input[type="submit"] {
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: linear-gradient(120deg,#2980b9, #b300ff);;
+  background: linear-gradient(120deg, #2980b9, #b300ff);
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -176,20 +93,43 @@ input[type="submit"]{
   cursor: pointer;
   outline: none;
 }
-input[type="submit"]:hover{
+
+input[type="submit"]:hover {
   border-color: rgb(107, 107, 107);
   transition: .5s;
 }
-.signup_link{
+
+.signup_link {
   margin: 30px 0;
   text-align: center;
   font-size: 16px;
   color: #666666;
 }
-.signup_link a{
+
+.signup_link a {
   color: #05619f;
   text-decoration: none;
 }
-.signup_link a:hover{
+
+.signup_link a:hover {
   text-decoration: underline;
+}
+
+.form-group {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.form-group input[type="checkbox"] {
+  margin-right: 10px;
+  transform: scale(1.5);
+  width: 20px;
+  height: 20px;
+}
+
+.form-group label {
+  font-size: 14px;
+  color: #333;
 }
