--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg, #2980b9, #b300ff);
+  background-color: #181818;
   height: 100vh;
   overflow: visible;
 }
@@ -23,12 +23,12 @@ body {
   width: 400px;
   background: rgb(255, 255, 255);
   border-radius: 10px;
-  box-shadow: 10px 10px 15px #b300ff;
+  box-shadow: 6px 4px 8px 2px #0000006b;
 }
 
 .center h1 {
   text-align: center;
-  color: #2196F3;
+  color: #1a191c;
   padding: 20px;
   border-bottom: 1px solid silver;
   font-size: 40px;
@@ -66,11 +66,6 @@ body {
   transition: .4s;
 }
 
-.txt_field input:focus ~ label {
-  top: -5px;
-  color: #0093f5;
-}
-
 .pass {
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
@@ -85,7 +80,7 @@ input[type="submit"] {
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: linear-gradient(120deg, #2980b9, #b300ff);
+  background: black;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -102,13 +97,14 @@ input[type="submit"]:hover {
 .signup_link {
   margin: 30px 0;
   text-align: center;
-  font-size: 16px;
+  font-size: 15px;
   color: #666666;
 }
 
 .signup_link a {
   color: #05619f;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .signup_link a:hover {
@@ -124,9 +120,8 @@ input[type="submit"]:hover {
 
 .form-group input[type="checkbox"] {
   margin-right: 10px;
-  transform: scale(1.5);
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
 }
 
 .form-group label {
